--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
                 </div>
                 <div class="little-cards">
                     <div class="little-card-1">
-                        <img src="./assets/images/video.jpg" class="VIDEO PRODUCTION">
+                        <img src="./assets/images/video.jpg" alt="VIDEO PRODUCTION" class="video-production">
                         <h2 class="video-main-title">Video Production</h2>
                         <p class="para-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, facilis!</p>
                         <button class="plans">Video Plans <i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                     <div class="little-card-2">
-                        <img src="./assets/images/web.jpg" class="WEB DEVELOPMENT">
+                        <img src="./assets/images/web.jpg" alt="WEB DEVELOPMENT" class="web-development">
                         <h2 class="web-main-title">Web Development</h2>
                         <p class="para-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, facilis!</p>
                         <button class="web-plans">Web Plans <i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                     <div class="little-card-3">
-                        <img src="./assets/images/print.jpg" class="print">
+                        <img src="./assets/images/print.jpg" alt="PRINT" class="print">
                         <h2 class="print-main-title">Print</h2>
                         <p class="para-7">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, facilis!</p>
                         <button class="print-plans">Print Plans <i class="fa-solid fa-arrow-right"></i></button>
