--- a/index.html
+++ b/index.html
@@ -1,132 +1,225 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  lang="en">
 <head>
-    <link rel="stylesheet" href="./assets/css/index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/js/all.min.js"></script>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML MOCKUP WEBSITE</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Home</title>
+		<link rel="stylesheet" type="text/css" href="./assets/css/index.css">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;800&family=Open+Sans:wght@300;400;500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Main Website -->
-    <header>
-        <div class="container">
-            <img src="./assets/images/logo.png" alt="MAIN LOGO">
-            <div class="navbar">
-                <ul class="nav">
-                    <li class="navlink"><a href="#">Home</a></li>
-                    <li class="navlink"><a href="#">About Us</a></li>
-                    <li class="navlink"><a href="#">Services</a></li>
-                    <li class="navlink"><a href="#">Team</a></li>
-                    <li class="navlink"><a href="#">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="hero-section">
-            <img src="./assets/images/main-banner.jpg" alt="MAIN BANNER">
-            <h1 class="title">Welcome to Three Star Media</h1>
-            <p class="para-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident quae doloribus dolores dicta corporis amet facilis, quo dolorum illum, sit necessitatibus dolor molestiae ullam consequuntur!</p>
-            <button>Connect With Us <i class="fa-solid fa-arrow-right"></i></button>
-        </div>
-    </header><br>
-    <main class="main-website">
-        <div class="container-2">
-            <img src="./assets/images/about-us.jpg" alt="ABOUT US">
-            <h2 class="about-us">About us</h2>
-            <p class="para-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus ratione magni, voluptatibus aliquam odit fuga. Ducimus voluptate, voluptas qui eligendi dignissimos amet quas odio eveniet ipsum odit, at hic tenetur?</p>
-            <section class="s2">
-                <div class="services-main-text">
-                    <h2 class="our-services">Our Services</h2>
-                </div>
-                <div class="large-cards">
-                    <div class="large-card-1">
-                        <img src="./assets/images/digital.jpg" alt="DIGITAL TRANSFORMATION">
-                        <h2 class="digital-main-title">Digital Transformation</h2>
-                        <p class="para-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, iure.</p>
-                    </div>
-                    <div class="large-card-2">
-                        <img src="./assets/images/marketing.jpg" alt="MARKETING">
-                        <h2 class="marketingmain-title">Marketing</h2>
-                        <p class="para-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, iure.</p>
-                    </div>
-                </div>
-                <div class="little-cards">
-                    <div class="little-card-1">
-                        <img src="./assets/images/video.jpg" alt="VIDEO PRODUCTION" class="video-production">
-                        <h2 class="video-main-title">Video Production</h2>
-                        <p class="para-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, facilis!</p>
-                        <button class="plans">Video Plans <i class="fa-solid fa-arrow-right"></i></button>
-                    </div>
-                    <div class="little-card-2">
-                        <img src="./assets/images/web.jpg" alt="WEB DEVELOPMENT" class="web-development">
-                        <h2 class="web-main-title">Web Development</h2>
-                        <p class="para-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, facilis!</p>
-                        <button class="web-plans">Web Plans <i class="fa-solid fa-arrow-right"></i></button>
-                    </div>
-                    <div class="little-card-3">
-                        <img src="./assets/images/print.jpg" alt="PRINT" class="print">
-                        <h2 class="print-main-title">Print</h2>
-                        <p class="para-7">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, facilis!</p>
-                        <button class="print-plans">Print Plans <i class="fa-solid fa-arrow-right"></i></button>
-                    </div>
-                </div>
-            </section>
-            <section class="s3">
-                <img src="./assets/images/vision.jpg" alt="VISION" class="vision">
-                <p class="para-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae perspiciatis fugiat quasi delectus fuga hic eius. Impedit explicabo sunt nesciunt error officiis aliquid iure recusandae, voluptatibus earum nulla repellendus ex.</p>
-                <button class="learn-more">Learn More <i class="fa-solid fa-arrow-right"></i></button>
-            </section>
-            <section class="s4">
-                <div class="john">
-                    <h2 class="our-team">Our Team</h2>
-                    <img src="./assets/images/john.jpg" alt="JOHN DOE" class="john-doe">
-                    <h3 class="company-role">CEO and Co-owner</h3>
-                    <div class="line"></div>
-                    <p class="para-9">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia quo non voluptatem similique sunt eius aliquid accusantium temporibus consequuntur nostrum omnis rerum vel alias cumque ad facere natus saepe, iusto repellat labore rem dolorem velit aperiam asperiores. Nihil, iste neque!</p>
-                </div>
-                <div class="bob">
-                    <img src="./assets/images/bob.jpg" alt="BOB RITE" class="bob-rite">
-                    <h3 class="company-role-1">CFO and Co-owner</h3>
-                    <div class="line-1"></div>
-                    <p class="para-10">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia quo non voluptatem similique sunt eius aliquid accusantium temporibus consequuntur nostrum omnis rerum vel alias cumque ad facere natus saepe, iusto repellat labore rem dolorem velit aperiam asperiores. Nihil, iste neque!</p>
-                </div>
-            </section>
-            <section class="s5">
-                <h2 class="contact-us">Contact Us</h2>
-                <h4 class="send-a-message">Send us a message</h4>
-                <form>
-                    <label for="fullname">Full Name</label><br>
-                    <input type="text" id="fullname" name="fullname"><br>
-                    <label for="mail">Email</label><br>
-                    <input type="text" id="mail" name="mail"><br>
-                    <label for="message">Message</label><br>
-                    <textarea name="message" id="message" cols="20" rows="10"></textarea><br>
-                    <button class="send-message">Send</button>
-                </form><br>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d360080.3165224893!2d-76.2810365682744!3d45.1642684977464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1669775841492!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <h2 class="operations">Hours of Operation</h2>
-                <table class="operations">
-                    <tr class="days-hours">
-                        <th class="days">Days</th>
-                        <th class="hours">Hours</th>
-                    </tr>
-                    <tr class="operations-1">
-                        <td class="monday-friday">Monday-Friday</td>
-                        <td class="time">9 AM - 6 PM</td>
-                    </tr>
-                    <tr class="operations-2">
-                        <td class="weekends">Saturday-Sunday</td>
-                        <td class="closed">Closed</td>
-                    </tr>
-                </table>
-            </section>
-        </div>
-    </main>
-    <footer class="footer">
-        <h3 class="copyrights">&#169; Copyright Three Star Media 2020</h3>
-        <h4 class="credits">All Images are taken from <a href="https://unsplash.com">Unsplash</a></h4>
-    </footer>
+	<div class="header">
+	    <div class="HeaderBottom">
+	        <div class="container">
+	            <div class="rows">
+	                <div class="main-logo">
+	                    <a href="#" class="logo">
+	                        <img src="./assets/images/logo.png" alt="logo">
+	                    </a>
+	                </div>
+
+					<div class="navigationMenu">
+						<ul class="mainMenu">
+							<li><a href="#">Home</a></li>													
+							<li><a href="#">About Us</a></li>
+							<li><a href="#">Services</a></li>												
+							<li><a href="#">Team</a></li>												
+							<li><a href="#">Contact</a></li>												
+						</ul>
+						<div class="form1">
+							<form action="post">
+								 <input type="text" id="fname" name="fname" value="" placeholder="search">
+								 <input type="submit" value="search" id="btn" name="search">
+							</form>	
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>	
+	</div>
+	<div class="banner">
+		<div class="banner">
+			<img src="./assets/images/main-banner.jpg" alt="office">
+		</div>
+		<div class="container">
+			<div class="bannerbox">		
+				<h1>Welcome to Three Star Media</h1>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
+				<h4><a href="#">Connect with us &#9658;</a></h4>				
+			</div>
+		</div>
+	</div>
+	<div class="aboutUS">
+		<div class="container">
+			<div class="row">
+				<div class="aboutUsleft">
+					<img src="./assets/images/about-us.jpg" alt="table tennies">
+				</div>
+				<div class="aboutUSright">
+					<h2>About Us</h2>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero unde repellendus exercitationem asperiores ducimus placeat, maxime soluta nesciunt pariatur aliquam consequuntur sequi saepe sint praesentium laboriosam perferendis eius amet ad?</p>
+					<h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, velit ipsam? Atque accusamus, excepturi corrupti sunt reiciendis soluta quo commodi quidem, non perferendis vel sed facilis rerum cum in exercitationem?</h4>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="services">
+		<div class="container">
+			<div class="heading">
+				<h2>Our Services</h2>
+			</div>
+			<div class="row">
+				<div class="digital">
+					<div class="services-img">
+						<img src="./assets/images/digital.jpg" alt="digital">
+					</div>
+					<div class="services-detail">
+						<h5>Digital Transformation</h5>
+						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+						<h4><a href="#">Digital Plans &#9658;</a></h4>
+					</div>
+				</div>
+				<div class="marketing">
+					<div class="services-img">
+						<img src="./assets/images/marketing.jpg" alt="marketing">
+					</div>
+					<div class="services-detail">
+						<h5>Marketing</h5>
+						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+						<h4><a href="#">Marketing Plans &#9658;</a></h4>
+					</div>
+				</div>
+				<div class="video">
+					<div class="services-img">
+						<img src="./assets/images/video.jpg" alt="video">
+					</div>
+					<div class="services-detail">
+						<h5>Video Production</h5>
+						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+						<h4><a href="#">Video Plans &#9658;</a></h4>
+					</div>
+				</div>
+				<div class="web">
+					<div class="services-img">
+						<img src="./assets/images/web.jpg" alt="web dev">
+					</div>
+					<div class="services-detail">
+						<h5>Web Development</h5>
+						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+						<h4><a href="#">Web Plans &#9658;</a></h4>
+					</div>
+				</div>
+				<div class="print">
+					<div class="services-img">
+						<img src="./assets/images/print.jpg" alt="image of a printer">
+					</div>
+					<div class="services-detail">
+						<h5>Print</h5>
+						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius vel, rem inventore quo tempora animi mollitia eaque error qui consectetur in reprehenderit magnam at vitae corporis quaerat deleniti explicabo nisi?</p>
+						<h4><a href="#">Print Plans &#9658;</a></h4>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="vision">
+		<div class="image">
+			<img src="./assets/images/vision.jpg"  alt="vision">
+		</div>
+		<div class="container">
+			<div class="vision-detail">
+				<h5>Our Vision</h5>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex voluptatem deleniti iure, si accusantium rerum est commodi veniam tempora spiciatis nobis officiis fugiat eaque. Veritatis exercitationem delectus ex ab laudantium.</p>
+				<h4><a href="#">Learn More  &#9658;</a></h4>
+			</div>
+		</div>
+	</div>
+	<div class="team">
+		<div class="container">
+			<div class="heading">
+				<h2>Our Team</h2>
+			</div>
+			<div class="row">
+				<div class="team-img">
+					<img src="./assets/images/john.jpg" alt="image of JOHN">
+				</div>
+				<div class="team-detail">
+					<h5>John Doe</h5>
+					<h4>CEO and Co-owner</h4>
+					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, aspernatur ratione sed cum ad officiis sint cumque fugiat similique. Earum Jaudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.</p>
+				</div>
+				<div class="team-detail">
+					<h5>Bob Rite</h5>
+					<h4>CEO and Co-owner</h4>
+					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, aspernatur ratione sed cum ad officiis sint cumque fugiat similique. Earum Jaudantium deleniti possimus? Voluptatem architecto repellendus harum sit voluptatum tempora.</p>
+				</div>
+				<div class="team-img">
+					<img src="./assets/images/bob.jpg" alt="image of BOB">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="contact">
+		<div class="container">
+			<div class="heading">
+				<h2>Contact Us</h2>
+			</div>
+			<div class="row">
+				<div class="contact-detail">
+					
+						<h4>Send us a message</h4>
+						<form action="post">
+							<ul class="name">
+								<li class="fname">
+								  <h6><label for="fname">Full Name</label><br></h6>
+								  <input type="text" id="cname" name="fname" value="">
+								 </li>
+								 <li class="email">
+								  <h6><label for="email">Email</label><br></h6>
+								  <input type="email" id="email" name="lname" value=""><br>
+								 </li>
+								 <li class="message">
+								  <h6><label for="message">Message</label><br></h6>
+								  <textarea  id="message" name="lname"></textarea><br>
+								 </li>
+								 <li class="button">
+								 	<input type="submit" value="send" id="sbtn">
+								 </li>
+							</ul>
+						</form> 
+					
+				</div>
+				<div class="map">
+					<h4>Location</h4>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.944552202059!2d-75.75751172465617!3d45.349931541056996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sin!4v1667902112594!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
+			</div>
+			<div class="hour">
+				<h4>Hours of operation</h4>
+			</div>
+			<table>
+				<tr>
+					<th>Days</th>
+					<th>Hours</th>
+				</tr>
+				<tr>
+					<td>Monday - Friday</td>
+					<td>9 AM - 6 PM</td>
+				</tr>
+				<tr>
+					<td>Saturday - Sunday</td>
+					<td>Closed</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+	<footer>
+		<div class="container">
+			<div class="footer-copyright">
+				<h5>© Copyright Three Star Media,2020</h5>
+				<h5>All images are taken from <a href="#">Unsplash</a></h5>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
