--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	                    </a>
 	                </div>
 
-					<div class="navigationMenu">
+					<div class="navMenu">
 						<ul class="mainMenu">
 							<li><a href="#">Home</a></li>													
 							<li><a href="#">About Us</a></li>
