--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<img src="./assets/images/main-banner.jpg" alt="office">
 		</div>
 		<div class="container">
-			<div class="bannerbox">		
+			<div class="BannerBox">		
 				<h1>Welcome to Three Star Media</h1>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam rerum voluptas nesciunt quam nostrum similique nihil laboriosam provident neque, recusandae voluptate temporibus! Animi accusamus id fuga voluptatibus facilis iusto consequuntur!</p>
 				<h4><a href="#">Connect with us &#9658;</a></h4>				
@@ -183,7 +183,7 @@
 								  <textarea  id="message" name="lname"></textarea><br>
 								 </li>
 								 <li class="button">
-								 	<input type="submit" value="send" id="sbtn">
+								 	<input type="submit" value="send" id="submit-btn">
 								 </li>
 							</ul>
 						</form> 
@@ -217,7 +217,7 @@
 		<div class="container">
 			<div class="footer-copyright">
 				<h5>© Copyright Three Star Media,2020</h5>
-				<h5>All images are taken from <a href="#">Unsplash</a></h5>
+				<h5>All images are taken from <a href="https://unsplash.com" target="_blank">Unsplash</a></h5>
 			</div>
 		</div>
 	</footer>
